--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,54 @@
+# Dependencies
 node_modules/
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build outputs
 dist/
 build/
+*.min.js
+*.min.css
+
+# Caching
 .cache/
 .parcel-cache/
+.npm
+
+# Environment files
 .env
 .env.local
+.env.production
+.env.development
+
+# Editor files
+.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+
+# Coverage reports
 coverage/
+*.lcov
+
+# Temporary files
+tmp/
+temp/
+
+# Archive files
 *.tgz
 *.tar.gz
+*.zip
+
+# Vercel
+.vercel
