--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "main": "index.html",
   "scripts": {
     "start": "python -m http.server 8000",
-    "test": "npm run test:html && npm run test:css && npm run test:js && npm run test:data",
-    "test:html": "npx html-validate *.html products/*.html blog/*.html",
-    "test:css": "npx stylelint 'css/**/*.css'",
-    "test:js": "npx eslint 'js/**/*.js'",
-    "test:data": "node scripts/validate-data.js",
-    "build": "npm run test && npm run minify",
+    "build": "npm run minify",
     "minify": "npm run minify:css && npm run minify:js",
     "minify:css": "npx clean-css-cli css/style.css -o dist/style.min.css",
     "minify:js": "npx uglify-js js/*.js -o dist/main.min.js",
     "serve": "npx serve -s . -l 3000",
     "dev": "npx live-server --port=3000 --no-browser",
-    "validate": "npm run test:html && npm run test:css && npm run test:js",
     "check-links": "node scripts/check-links.js",
     "check-images": "node scripts/check-images.js",
     "auto-fix": "node scripts/auto-fix.js",
