--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|svg|webp|ico))",
+      "source": "/(.*)?\\.(png|jpg|jpeg|gif|svg|webp|ico)$",
       "headers": [
         {
           "key": "Cache-Control",
@@ -35,7 +35,7 @@
       ]
     },
     {
-      "source": "/(.*\\.html)",
+      "source": "/(.*)?\\.(html)$",
       "headers": [
         {
           "key": "Cache-Control",
