--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "¡Hola Japón!",
-  "short_name": "HolaJapón",
+  "name": "Youkoso",
+  "short_name": "Youkoso",
   "description": "Tienda oficial de productos japoneses auténticos en México",
   "start_url": "/",
   "display": "standalone",
