--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Operating System
 .DS_Store
@@ -50,5 +51,11 @@ temp/
 *.tar.gz
 *.zip
 
-# Vercel
+# Firebase
+.firebase/
+firebase-debug.log
+ui-debug.log
+
+# Firebase Cache
+.runtimeconfig.json
 .vercel
